Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31672

Crash in Qt Designer when undocking/moving docks with tree widgets around

XMLWordPrintable

    • 0bc96d1d6ba29c6e0a4c39cc526d9515036b7453 b6f24423716b82686c86d33828b7139ac717afdd

      • Start Designer in MDI mode
      • Open form
      • Drag out object inspector, move around, redock
      • Observe crash
        Program received signal SIGSEGV, Segmentation fault.
        0x00007ffff581476a in QWindow::mapFromGlobal (this=0xcc3690, pos=...) at kernel/qwindow.cpp:2105
        2105        if (d->platformWindow && d->platformWindow->isEmbedded(0))
        (gdb) where
        #0  0x00007ffff581476a in QWindow::mapFromGlobal (this=0xcc3690, pos=...) at kernel/qwindow.cpp:2105
        #1  0x00007ffff6655580 in QWidget::mapFromGlobal (this=0xc49ba0, pos=...) at kernel/qwidget_qpa.cpp:316
        #2  0x00007ffff68d1bbf in QTreeView::drawTree (this=0xc97170, painter=0x7fffffffbd20, region=...) at itemviews/qtreeview.cpp:1422
        #3  0x00007ffff68d1141 in QTreeView::paintEvent (this=0xc97170, event=0x7fffffffcab0) at itemviews/qtreeview.cpp:1280
        #4  0x00007ffff662f747 in QWidget::event (this=0xc97170, event=0x7fffffffcab0) at kernel/qwidget.cpp:8028
        #5  0x00007ffff6759ccb in QFrame::event (this=0xc97170, e=0x7fffffffcab0) at widgets/qframe.cpp:534
        #6  0x00007ffff67f29a9 in QAbstractScrollArea::viewportEvent (this=0xc97170, e=0x7fffffffcab0) at widgets/qabstractscrollarea.cpp:1163
        #7  0x00007ffff6887b7f in QAbstractItemView::viewportEvent (this=0xc97170, event=0x7fffffffcab0) at itemviews/qabstractitemview.cpp:1679
        #8  0x00007ffff68d0ffc in QTreeView::viewportEvent (this=0xc97170, event=0x7fffffffcab0) at itemviews/qtreeview.cpp:1262
        #9  0x00007ffff67f38b9 in QAbstractScrollAreaPrivate::viewportEvent (this=0xcab3c0, event=0x7fffffffcab0) at widgets/qabstractscrollarea_p.h:105
        #10 0x00007ffff67f3980 in QAbstractScrollAreaFilter::eventFilter (this=0xcacd60, o=0xc49ba0, e=0x7fffffffcab0) at widgets/qabstractscrollarea_p.h:121
        #11 0x00007ffff522edac in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x6953c0, receiver=0xc49ba0, event=0x7fffffffcab0) at kernel/qcoreapplication.cpp:967
        #12 0x00007ffff65e70fb in QApplicationPrivate::notify_helper (this=0x6953c0, receiver=0xc49ba0, e=0x7fffffffcab0) at kernel/qapplication.cpp:3438
        #13 0x00007ffff65e6f85 in QApplication::notify (this=0x7fffffffdcf0, receiver=0xc49ba0, e=0x7fffffffcab0) at kernel/qapplication.cpp:3407
        #14 0x00007ffff522ea6a in QCoreApplication::notifyInternal (this=0x7fffffffdcf0, receiver=0xc49ba0, event=0x7fffffffcab0) at kernel/qcoreapplication.cpp:871
        #15 0x00007ffff65e95f1 in QCoreApplication::sendSpontaneousEvent (receiver=0xc49ba0, event=0x7fffffffcab0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:235
        #16 0x00007ffff66278d8 in QWidgetPrivate::drawWidget (this=0xcab970, pdev=0xd4b000, rgn=..., offset=..., flags=36, sharedPainter=0x0, backingStore=0xde63f0) at kernel/qwidget.cpp:5129
        #17 0x00007ffff65f5865 in QWidgetBackingStore::sync (this=0xde63f0) at kernel/qwidgetbackingstore.cpp:1084
        #18 0x00007ffff661ede1 in QWidgetPrivate::syncBackingStore (this=0xd9d3f0) at kernel/qwidget.cpp:1673
        #19 0x00007ffff662fd7d in QWidget::event (this=0xd9c240, event=0xe79180) at kernel/qwidget.cpp:8166
        #20 0x00007ffff6742e46 in QDockWidget::event (this=0xd9c240, event=0xe79180) at widgets/qdockwidget.cpp:1464
        #21 0x00007ffff65e7124 in QApplicationPrivate::notify_helper (this=0x6953c0, receiver=0xd9c240, e=0xe79180) at kernel/qapplication.cpp:3442
        #22 0x00007ffff65e6f85 in QApplication::notify (this=0x7fffffffdcf0, receiver=0xd9c240, e=0xe79180) at kernel/qapplication.cpp:3407
        #23 0x00007ffff522ea6a in QCoreApplication::notifyInternal (this=0x7fffffffdcf0, receiver=0xd9c240, event=0xe79180) at kernel/qcoreapplication.cpp:871
        #24 0x00007ffff52326cd in QCoreApplication::sendEvent (receiver=0xd9c240, event=0xe79180) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:232
        #25 0x00007ffff522fb4a in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x695530) at kernel/qcoreapplication.cpp:1473
        #26 0x00007ffff522f711 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1333
        #27 0x00007ffff57f351a in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:560
        #28 0x00007fffeff3c5bb in QUnixEventDispatcherQPA::processEvents (this=0x69bcf0, flags=...) at eventdispatchers/qunixeventdispatcher.cpp:70
        #29 0x00007ffff522b694 in QEventLoop::processEvents (this=0x7fffffffdc70, flags=...) at kernel/qeventloop.cpp:136
        #30 0x00007ffff522b96d in QEventLoop::exec (this=0x7fffffffdc70, flags=...) at kernel/qeventloop.cpp:212
        #31 0x00007ffff522f108 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1124
        #32 0x00007ffff5805da6 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1196
        #33 0x00007ffff65e4307 in QApplication::exec () at kernel/qapplication.cpp:2689
        #34 0x0000000000434897 in main (argc=1, argv=0x7fffffffde48) at main.cpp:57
        
        

        1. delayedcreation.patch
          2 kB
          Friedemann Kleint
        2. qtbug31672_diag.patch
          6 kB
          Friedemann Kleint
        3. qtbug31672_example.log
          5 kB
          Friedemann Kleint
        4. qtbug31672_valgrind.log
          718 kB
          Friedemann Kleint
        5. qtbug31672.tar
          20 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes